<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/pattern_atual"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wifi_pattern_atual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/pattern_novo"
        android:textColor="#000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/wifi_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pattern_hint" />

    <RadioGroup
        android:id="@+id/wifi_pattern_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/wifi_pattern_contendo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/pattern_contendo" />

        <RadioButton
            android:id="@+id/wifi_pattern_igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/pattern_igual" />
    </RadioGroup>

    <Button
        android:id="@+id/wifi_pattern_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pattern_salvar" />

</LinearLayout>